--- a/src/app/pages/core/components/side-menu/side-menu.component.scss
+++ b/src/app/pages/core/components/side-menu/side-menu.component.scss
@@ -2,4 +2,22 @@
     background-color: var(--colorBaseSecondary);
     box-shadow: 4px 5px 15px var(--sobraBorda);
     z-index: 99;
+    display: none;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    max-width: 250px;
+    min-width: 250px;
+}
+
+:host(.active) {
+    display: flex;
+}
+
+
+@media screen and (max-width: 767px) {
+    :host {
+        display: none;
+    }
+    
 }
