--- a/src/app/pages/core/components/top-menu/top-menu.component.html
+++ b/src/app/pages/core/components/top-menu/top-menu.component.html
@@ -1,4 +1,7 @@
-<img class="w-125px" src="assets/logo/routa-garage-logo2-white.png" alt="">
+<section class="d-flex align-items-center gap-2">
+    <i class="d-md-none bi bi-list fs-15" (click)="openSideMenu()"></i>
+    <img class="w-125px" src="assets/logo/routa-garage-logo2-white.png" alt="">
+</section>
 <div class="d-flex align-items-center justify-content-center gap-2">
     <app-button-default (click)="logoff()" >Sair</app-button-default>
     <button class="btn btn-sm" (click)="toggleMode()" >
