--- a/src/app/pages/core/components/side-menu/side-menu.component.scss
+++ b/src/app/pages/core/components/side-menu/side-menu.component.scss
@@ -2,22 +2,23 @@
     background-color: var(--colorBaseSecondary);
     box-shadow: 4px 5px 15px var(--sobraBorda);
     z-index: 99;
-    display: none;
+    display: flex;
     flex-direction: column;
     align-items: start;
     justify-content: start;
     max-width: 250px;
     min-width: 250px;
+    transform: translateX(-100%);
+    opacity: 0;
+    transition: opacity 0.5s ease, transform 0.3s ease, position 0.3s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
 }
 
 :host(.active) {
-    display: flex;
-}
-
-
-@media screen and (max-width: 767px) {
-    :host {
-        display: none;
-    }
-    
+    position: relative;
+    opacity: 1;
+    transform: translateX(0);
 }
