--- a/src/app/components/modals/modal-customers/modal-customers.component.html
+++ b/src/app/components/modals/modal-customers/modal-customers.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formStorage" class="row g-4">
+<form [formGroup]="formCustomers" class="row g-4">
     <fieldset class="form-floating col-lg-6">
         <input class="form-control" type="text" id="name" placeholder="Digite o nome do veiculo" formControlName="name">
         <label class="form-label ps-4" for="name">Nome</label>
