--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -5,3 +5,8 @@
 .section-logo {
     background-image: url('/assets/backgrounds/bg-login.png');
 }
+
+.form-control::content {
+    font-weight: 300;
+    letter-spacing: 1px;
+}
