--- a/src/app/pages/core/components/side-menu/side-menu.component.html
+++ b/src/app/pages/core/components/side-menu/side-menu.component.html
@@ -1,16 +1,25 @@
-<aside class="d-flex flex-column align-items-start justify-content-start gap-2 p-3">
-    <section class="d-flex flex-column align-items-center justify-content-center gap-2">
-        <app-image-default class="w-30" urlImage="assets/avatar/user-blank.png" altImage="Imagem do logo Routa Garage"></app-image-default>
-        <span class="text-center fs-11 text-break">Nome do usuario</span>
-        <small class="fs-9 text-break">emaildousuario&#64;routagarage.com.br</small>
-    </section>
-    <hr class="w-100">
-    <nav class="d-flex flex-column align-items-start justify-content-start gap-2">
+<aside class="d-flex flex-column align-items-start justify-content-start gap-2 p-3 h-100">
+    <nav class="d-flex flex-column align-items-start justify-content-start gap-2 w-100 flex-grow-1">
         @for (link of links; track $index) {
-            <a class="item-side-menu text-decoration-none" [routerLink]="link.route" routerLinkActive="active">
-                <i class="icon-selected bi bi-caret-right-fill"></i>
+            <a class="item-side-menu text-decoration-none w-100" [routerLink]="link.route" routerLinkActive="active">
                 {{link.name}}
+                <!-- <i class="icon-selected bi bi-caret-left-fill"></i> -->
             </a>
         }
     </nav>
+    <hr class="w-100">
+    <section ngbDropdown #dropdownUser="ngbDropdown" class="d-flex position-relative flex-column align-items-center justify-content-center gap-2" (mouseenter)="dropdownUser.open()" >
+        <app-image-default class="w-30 cursor-pointer noArrowDropdown" urlImage="assets/avatar/user-blank.png" altImage="Imagem do logo Routa Garage"  ngbDropdownToggle></app-image-default>
+        <div ngbDropdownMenu class="w-250px w-sm-400px positionOnScreen p-3">
+            <div class="d-flex flex-row gap-3">
+                <app-image-default class="w-20 d-flex flex-column" urlImage="assets/avatar/user-blank.png" altImage="Imagem do logo Routa Garage"></app-image-default>
+                <span class="d-flex flex-column align-items-start justify-content-center gap-1">
+                    <h3 class="text-center fs-9 text-break">Nome do usuario</h3>
+                    <small class="fs-9 text-break">emaildousuario&#64;routagarage.com.br</small>
+                </span>
+            </div>
+            <hr class="w-100">
+            <app-button-default [large]="true" (click)="logoff()" >Sair</app-button-default>
+        </div>
+    </section>
 </aside>
