--- a/src/app/pages/core/components/top-menu/top-menu.component.html
+++ b/src/app/pages/core/components/top-menu/top-menu.component.html
@@ -3,7 +3,7 @@
     <img class="w-125px" src="assets/logo/routa-garage-logo2-white.png" alt="">
 </section>
 <div class="d-flex align-items-center justify-content-center gap-2">
-    <app-button-default (click)="logoff()" >Sair</app-button-default>
+    <!-- <app-button-default (click)="logoff()" >Sair</app-button-default> -->
     <button class="btn btn-sm" (click)="toggleMode()" >
         <i class="fs-12 bi bi-{{returnIconThemeMode()}}"></i>
     </button>
