--- a/src/app/components/modals/modal-customers/modal-customers.component.html
+++ b/src/app/components/modals/modal-customers/modal-customers.component.html
@@ -1,46 +1,73 @@
-<form [formGroup]="formCustomers" class="row g-4">
-    <fieldset class="form-floating col-lg-6">
-        <input class="form-control" type="text" id="name" placeholder="Digite o nome do veiculo" formControlName="name">
+<form [formGroup]="formCustomers" class=" card-body row g-4" ngbAutofocus>
+    <fieldset class="form-floating position-relative col-lg-12 mb-2">
+        <input class="form-control {{formCustomers.get('name')?.touched && formCustomers.get('name')?.invalid ? 'is-invalid' : ''}}" type="text" id="name" placeholder="Digite o nome do veiculo" formControlName="name">
         <label class="form-label ps-4" for="name">Nome</label>
+       @if (formCustomers.get('name')?.touched && formCustomers.get('name')?.invalid) {
+           <span class="position-absolute text-danger fs-9">Obrigatorio</span>
+       } 
     </fieldset>
-    <fieldset class="form-floating col-lg-6">
-        <input class="form-control" type="text" id="brand" placeholder="Digite a marca do veiculo" formControlName="brand">
-        <label class="form-label ps-4" for="brand">Marca</label>
+    <fieldset class="form-floating col-lg-6 mb-2">
+        <input class="form-control {{formCustomers.get('email')?.touched && formCustomers.get('email')?.invalid ? 'is-invalid' : ''}}" type="email" id="email" placeholder="Digite o nome do veiculo" formControlName="email">
+        <label class="form-label ps-4" for="email">E-mail</label>
+        @if (formCustomers.get('email')?.touched && formCustomers.get('email')?.invalid) {
+            <span class="position-absolute text-danger fs-9">Obrigatorio</span>
+        } 
     </fieldset>
-    <fieldset class="form-floating col-lg-6">
-        <input class="form-control" type="text" id="model" placeholder="Digite o modelo do veiculo" formControlName="model">
-        <label class="form-label ps-4" for="model">Modelo</label>
+    <fieldset class="form-floating col-lg-6 mb-2">
+        <input class="form-control {{formCustomers.get('phone')?.touched && formCustomers.get('phone')?.invalid ? 'is-invalid' : ''}}" type="phone" id="phone" placeholder="Digite o nome do veiculo" formControlName="phone">
+        <label class="form-label ps-4" for="phone">Telefone</label>
+        @if (formCustomers.get('phone')?.touched && formCustomers.get('phone')?.invalid) {
+            <span class="position-absolute text-danger fs-9">Obrigatorio</span>
+        } 
     </fieldset>
-    <fieldset class="form-floating col-lg-6">
-        <input class="form-control" type="text" id="color" placeholder="Digite o nome do veiculo" formControlName="color">
-        <label class="form-label ps-4" for="color">Cor</label>
+    <fieldset class="form-floating col-lg-6 mb-2">
+        <input class="form-control {{formCustomers.get('address')?.touched && formCustomers.get('address')?.invalid ? 'is-invalid' : ''}}" type="text" id="address" placeholder="Digite o nome do veiculo" formControlName="address">
+        <label class="form-label ps-4" for="address">Endereço</label>
+        @if (formCustomers.get('address')?.touched && formCustomers.get('address')?.invalid) {
+            <span class="position-absolute text-danger fs-9">Obrigatorio</span>
+        } 
     </fieldset>
-    <fieldset class="form-floating col-lg-6">
-        <input class="form-control" type="number" id="yearFabrication" placeholder="Digite o ano de fabricação do veiculo" formControlName="yearFabrication">
-        <label class="form-label ps-4" for="yearFabrication">Ano de fabricação</label>
-    </fieldset>
-    <fieldset class="form-floating col-lg-6">
-        <input class="form-control" type="number" id="yearModel" placeholder="Digite o ano do veiculo" formControlName="yearModel">
-        <label class="form-label ps-4" for="yearModel">Ano do veiculo</label>
-    </fieldset>
-    <fieldset class="form-floating col-lg-6">
-        <input class="form-control" type="number" id="km" placeholder="Digite a quilometragem do veiculo" formControlName="km">
-        <label class="form-label ps-4" for="km">Quilometragem</label>
-    </fieldset>
-    <fieldset class="form-floating col-lg-6">
-        <input class="form-control" type="number" id="price" placeholder="Digite o preco do veiculo" formControlName="price">
-        <label class="form-label ps-4" for="price">Preco</label>
-    </fieldset>
-    <fieldset class="form-floating col-lg-6">
-        <input class="form-control" type="text" id="description" placeholder="Digite a descricao do veiculo" formControlName="description">
-        <label class="form-label ps-4" for="description">Descricao</label>
-    </fieldset>
-    <fieldset class="form-floating col-lg-6">
-        <input class="form-control" type="text" id="status" placeholder="Digite o status do veiculo" formControlName="status">
+    <fieldset class="form-floating col-lg-6 mb-2">
+        <select class="form-select {{formCustomers.get('status')?.touched && formCustomers.get('status')?.invalid ? 'is-invalid' : ''}}" id="status" formControlName="status">
+            <option value="ACTIVE">Ativo</option>
+            <option value="INACTIVE">Inativo</option>
+        </select>
         <label class="form-label ps-4" for="status">Status</label>
+        @if (formCustomers.get('status')?.touched && formCustomers.get('status')?.invalid) {
+            <span class="position-absolute text-danger fs-9">Obrigatorio</span>
+        } 
     </fieldset>
-    <fieldset class="form-floating col-lg-6">
-        <input class="form-control" type="file" id="image" placeholder="Digite a imagem do veiculo" formControlName="image">
-        <label class="form-label ps-4" for="image">Imagem</label>
+    <fieldset class="form-floating col-lg-6 mb-2">
+        <input class="form-control {{formCustomers.get('birthDate')?.touched && formCustomers.get('birthDate')?.invalid ? 'is-invalid' : ''}}" type="date" id="birthDate" placeholder="Digite o ano de fabricação do veiculo" formControlName="birthDate">
+        <label class="form-label ps-4" for="birthDate">Data de nascimento</label>
+        @if (formCustomers.get('birthDate')?.touched && formCustomers.get('birthDate')?.invalid) {
+            <span class="position-absolute text-danger fs-9">Obrigatorio</span>
+        } 
+    </fieldset>
+    <fieldset class="form-floating col-lg-6 mb-2">
+        <select class="form-select {{formCustomers.get('gender')?.touched && formCustomers.get('gender')?.invalid ? 'is-invalid' : ''}}" id="gender" formControlName="gender">
+            <option value="Masculino">Masculino</option>
+            <option value="Feminino">Feminino</option>
+        </select>
+        <label class="form-label ps-4" for="gender">Genero</label>
+        @if (formCustomers.get('gender')?.touched && formCustomers.get('gender')?.invalid) {
+            <span class="position-absolute text-danger fs-9">Obrigatorio</span>
+        } 
+    </fieldset>
+    <fieldset class="form-floating col-lg-6 mb-2">
+        <input class="form-control {{formCustomers.get('cpf')?.touched && formCustomers.get('cpf')?.invalid ? 'is-invalid' : ''}}" type="number" id="cpf" placeholder="Digite o nome do veiculo" formControlName="cpf">
+        <label class="form-label ps-4" for="cpf">CPF</label>
+        @if (formCustomers.get('cpf')?.touched && formCustomers.get('cpf')?.invalid) {
+            <span class="position-absolute text-danger fs-9">Obrigatorio</span>
+        } 
+    </fieldset>
+    <fieldset class="form-floating col-lg-6 mb-2">
+        <input class="form-control {{formCustomers.get('rg')?.touched && formCustomers.get('rg')?.invalid ? 'is-invalid' : ''}}" type="number" id="rg" placeholder="Digite o nome do veiculo" formControlName="rg">
+        <label class="form-label ps-4" for="rg">RG</label>
+        @if (formCustomers.get('rg')?.touched && formCustomers.get('rg')?.invalid) {
+            <span class="position-absolute text-danger fs-9">Obrigatorio</span>
+        } 
     </fieldset>
 </form>
+
+<app-footer-modal (confirm)="save()"></app-footer-modal>
