--- a/src/assets/sass/utilities.scss
+++ b/src/assets/sass/utilities.scss
@@ -7,7 +7,7 @@ $utilities-bg-colors: (
   "info": $info,
   "light": $light,
   "dark": $dark,
-  "teste": var(--colorBgTable)
+  "table": var(--colorBgTable)
 );
 
 $utilities-bg-colors-light: (
