--- a/src/app/components/buttons/button-default/button-default.component.html
+++ b/src/app/components/buttons/button-default/button-default.component.html
@@ -1,3 +1,3 @@
-<button class="btn {{large() ? 'w-100' : ''}}">
+<button class="btn border-0 {{large() ? 'w-100' : ''}}">
     <ng-content></ng-content>
 </button>
