--- a/src/app/pages/core/content/content.component.html
+++ b/src/app/pages/core/content/content.component.html
@@ -1,2 +1,4 @@
-<router-outlet></router-outlet>
+<section class="d-flex">
+    <router-outlet></router-outlet>
+</section>
 <app-footer></app-footer>
