Integração de aviso no modal, e correção no nome do projeto

--- a/src/app/components/modals/modal-customers/modal-customers.component.html
+++ b/src/app/components/modals/modal-customers/modal-customers.component.html
@@ -71,3 +71,5 @@
 </form>
 
 <app-footer-modal (confirm)="save()"></app-footer-modal>
+
+<p-toast [breakpoints]="{ '767px': { width: '90%', right: '0'} }" position="bottom-center" key="br" />
