--- a/src/app/pages/error/error.component.html
+++ b/src/app/pages/error/error.component.html
@@ -1,4 +1,5 @@
 <section class="container-error">
-    <span>Erro!</span>
-    <button (click)="backToHomePage()">Voltar</button>
+    <img src="./assets/logo/routa-garage-logo-white.png" class="max-w-300px" alt="">
+    <span class="fw-normal text-white">Ops! Algo deu errado</span>
+    <app-button-default (click)="backToHomePage()">Pagina inicial</app-button-default>
 </section>
