--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
 <router-outlet></router-outlet>
+<p-toast [breakpoints]="{ '767px': { width: '90%', right: '0'} }" position="bottom-center" key="br" />
